major bug fix & cloudinary
