# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import addressesRouter from "./addresses";
 import bookingsRouter from "./bookings";
 import ordersRouter from "./orders";
 import panditsRouter from "./pandits";
+import storeItemsRouter from "./store-items";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use("/addresses", addressesRouter);
 router.use("/bookings", bookingsRouter);
 router.use("/orders", ordersRouter);
 router.use("/pandits", panditsRouter);
+router.use("/store-items", storeItemsRouter);
 
 export default router;
